[package]
name = "deconwolf"
version = "0.5.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Erik L. G. Wernersson"]
description = "3D deconvolution for fluorescence microscopy"

[[bin]]
name = "dw"
path = "src/main.rs"

[lib]
name = "deconwolf"
path = "src/lib.rs"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
num-complex = "0.4"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tiff = "0.9"
png = "0.17"
rustfft = "6"
log = "0.4"
env_logger = "0.11"
byteorder = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
