[package]
name = "dw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dw"
path = "src/main.rs"

[features]
default = []
gpu = ["dw-deconv/gpu"]
fftw = ["dw-fft/fftw-backend"]

[dependencies]
dw-core = { workspace = true }
dw-fft = { workspace = true }
dw-deconv = { workspace = true }
dw-psf = { workspace = true }
dw-tools = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
