[package]
name = "dw-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dw-core = { workspace = true }
dw-kdtree = { workspace = true }
dw-trafo = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
